--- a/app/src/main/res/drawable/text_hover.xml
+++ b/app/src/main/res/drawable/text_hover.xml
@@ -3,6 +3,6 @@
     <item android:state_focused="true" android:color="@color/colorPrimary"/>
     <item android:state_pressed="true" android:state_enabled="false"
         android:color="@color/colorPrimary" />
-    <item android:state_enabled="false" android:color="@color/grey_800" />
-    <item android:color="@color/grey_800"/>
+    <item android:state_enabled="false" android:color="@color/black" />
+    <item android:color="@color/black"/>
 </selector>
