--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <android.support.v4.view.ViewPager
@@ -25,21 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <com.github.mmin18.widget.RealtimeBlurView
+        android:visibility="invisible"
         app:realtimeOverlayColor="#f0ffffff"
         app:realtimeBlurRadius="0dp"
         android:id="@+id/rootblur"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
-    <com.github.silvestrpredko.dotprogressbar.DotProgressBar
-        android:id="@+id/progress_bar"
-        android:indeterminate="true"
-        android:layout_centerInParent="true"
-        android:layout_width="150dp"
-        app:amount="2"
-        app:duration="500"
-        app:startColor="@color/colorPrimary"
-        app:endColor="@color/white"
-        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:visibility="invisible"
         android:background="@color/white"
@@ -54,6 +45,15 @@
             android:textSize="42sp"
             android:text="Ish, sem internet você não consegue fazer nada"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/reload"
+            android:background="@color/blue_500"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:text="Tentar novamente"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ImageView
              android:id="@+id/offlineimage"
