--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+
     tools:context=".NewUser">
 
     <android.support.v4.view.ViewPager
