--- a/app/src/main/res/layout/fonts.xml
+++ b/app/src/main/res/layout/fonts.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     android:id="@+id/layout"
-     android:elevation="4dp"
-    android:layout_margin="1dp"
-    app:cardCornerRadius="10dp"
+     android:elevation="3dp"
+    app:cardCornerRadius="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="105dp"
-    android:layout_height="105dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:padding="5dp"
+        android:background="@drawable/bottom_line"
+        android:padding="2dp"
         android:layout_margin="10dp"
          android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
+            android:textAlignment="center"
              android:textColor="@color/black"
             android:layout_gravity="center"
             android:id="@+id/fonttest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="A"
-            android:textSize="32sp" />
-        <TextView
-            android:layout_gravity="center"
-            android:padding="5dp"
-             android:id="@+id/font"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="fontname"
-            android:textAlignment="center"
-            android:textSize="12sp" />
+            android:text="Change is a powerful thing"
+            android:textSize="26sp" />
 
 
     </LinearLayout>
