--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,38 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/white"
-     >
+    android:animateLayoutChanges="true"
+    android:background="@color/white">
 
+    <LinearLayout
+        android:animateLayoutChanges="true"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
-        android:elevation="2dp"
+        android:animateLayoutChanges="true"
+        android:background="@color/colorPrimary"
+        android:elevation="3dp"
         android:id="@+id/searchtool"
-        android:layout_margin="10dp"
-        android:background="@drawable/retangle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:animateLayoutChanges="true"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <EditText
-            android:layout_marginEnd="15dp"
-            android:inputType="textMultiLine"
+            android:inputType="text"
             android:id="@+id/search"
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_search_black_24dp"
+            android:drawableTint="@color/white"
             android:backgroundTint="@color/transparent"
-            android:textColorHint="@color/colorPrimary"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:hint="Pesquisar..."
             android:imeOptions="actionSearch"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+            <ImageButton
+                android:tint="@color/white"
+                android:layout_gravity="center|end"
+                android:background="@color/transparent"
+                android:id="@+id/close"
+                android:src="@drawable/ic_close_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
-        <android.support.v7.widget.RecyclerView
+    <GridLayout
+        android:layout_gravity="center"
+        android:animateLayoutChanges="true"
+        android:columnCount="1"
+         android:id="@+id/categoriesgrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v7.widget.CardView
+            android:layout_gravity="center"
+             android:layout_height="100dp"
+            android:layout_marginBottom="2dp"
+            android:layout_width="match_parent"
+            >
+            <ImageView
+                  android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/love"
+                android:src="@drawable/gradlove"
+                />
+            <TextView
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:fontFamily="@font/cabin_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Amor"
+                android:textColor="@color/white"
+                android:textSize="24sp"/>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_gravity="center"
+             android:layout_marginBottom="2dp"
+
+            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            >
+            <ImageView
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/citation"
+                android:src="@drawable/gradcitation_card"
+                />
+            <TextView
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:fontFamily="@font/cabin_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Citação"
+                android:textColor="@color/white"
+                android:textSize="24sp"/>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_gravity="center"
+             android:layout_marginBottom="2dp"
+            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            >
+        <ImageView
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:id="@+id/music"
+            android:src="@drawable/gradmusic"
+            />
+
+            <TextView
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:fontFamily="@font/cabin_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Música"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:background="@drawable/gradmotivation"
+            android:layout_gravity="center"
+             android:layout_marginBottom="2dp"
+            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            >
+            <ImageView
+                android:id="@+id/motivation"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:src="@drawable/gradmotivation"
+                />
+            <TextView
+                android:textStyle="bold"
+                android:textAllCaps="true"
+                android:fontFamily="@font/cabin_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Motivação"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+    </GridLayout>
+
+
+
+    <android.support.v7.widget.RecyclerView
             android:id="@+id/searchresult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+    </LinearLayout>
 
 
-</LinearLayout>
+
+
+</ScrollView>
 
 
