--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -277,8 +277,8 @@
 
 
     <!-- my colors -->
-    <color name="colorPrimary">#BA68C8</color>
-    <color name="colorPrimaryDark">#8E24AA</color>
+    <color name="colorPrimary">#ab47bc</color>
+    <color name="colorPrimaryDark">#6a1b9a</color>
     <color name="colorAccent">#212121</color>
     <color name="black">#000000</color>
     <color name="lblack">#64000000</color>
